# Catwalk

./: README.md  openmujoco.py  requirements.txt
cat_gym_env/: run_training.py  setup.py  test_env.py  train_cat.py
cat_gym_env/cat_env/: __init__.py  cat_env.py
cat_gym_env/cat_env/assets/: cat.xml
cat_gym_env/cat_env/assets/meshes/: lowerleg_br.STL  lowerleg_fl.STL  upperleg_br.STL  upperleg_fr.STL
cat_model/: cat_mujoco.xml
cat_model/cad/: cat.SLDASM  cat_assembly.SLDASM
cat_model/cad/cat_urdf.SLDASM/: CMakeLists.txt  package.xml
cat_model/cad/cat_urdf.SLDASM/config/: joint_names_cat_urdf.SLDASM.yaml
cat_model/cad/cat_urdf.SLDASM/launch/: display.launch  gazebo.launch
cat_model/cad/cat_urdf.SLDASM/meshes/: lowerleg_bl.STL
cat_model/cad/cat_urdf.SLDASM/urdf/: cat_urdf.SLDASM.csv  cat_urdf.SLDASM.urdf
cat_model/cad/cat_urdf_pkg/: CMakeLists.txt  package.xml
cat_model/cad/cat_urdf_pkg/config/: joint_names_cat_model.SLDASM.yaml
cat_model/cad/cat_urdf_pkg/launch/: display.launch  gazebo.launch
cat_model/cad/cat_urdf_pkg/meshes/: lowerleg_bl.STL  lowerleg_br.STL  upperleg_bl.STL  upperleg_fl.STL
cat_model/cad/parts/: base.SLDPRT  body.SLDPRT  lowerleg.SLDPRT  upperleg_back.SLDPRT  upperleg_front.SLDPRT
cat_model/meshes/: lowerleg_fl.STL  lowerleg_fr.STL
cat_model/mujoco_models/: cat.xml  cat_model.xml  openmujoco.py  scene.xml
cat_model/mujoco_models/meshes/: base_link.STL  body.STL  lowerleg_fr.STL  upperleg_br.STL
cat_model/urdf/: base_link.STL  cat.urdf  upperleg_bl.STL  upperleg_fl.STL
(+2 files in other folders)
